src/objects/BXGO_Competitor_Product__c.object
<CustomObject>
    <description>Product that is sold by a Competitor.</description>
    <fields>
        <fullName>BXGO_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Accounts with a &apos;Competitor&apos; Record Type.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>BST_Competitor</value>
            </filterItems>
            <infoMessage>Please select an Account with a &apos;Competitor&apos; Record Type.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Contract Type.</description>
        <inlineHelpText>Contract Type.</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors_Contracts_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <description>Device Type.</description>
        <inlineHelpText>Device Type.</inlineHelpText>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors_Devices_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <description>Producer.</description>
        <inlineHelpText>Producer Name (see the corresponding Account -Record Type: Competitor).</inlineHelpText>
        <label>Producer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Devices_Producers</valueSetName>
        </valueSet>
    </fields>
    <label>Competitor Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>